--- a/hello.html
+++ b/hello.html
@@ -30,7 +30,12 @@
 			<h1>Mon Gist</h1>
 			<p><script src="https://gist.github.com/valsauv2/d61387c3c24b9fe879f91d5cdcac9af5.js"></script></p>
 		</div>
-		
+		<div>
+			<h1>Mes Commandes Git</h1>
+			<p>git pull</p>
+		</div>
+
+
 		
 	
 </body>
