Modif hello pudh

--- a/hello.html
+++ b/hello.html
@@ -30,6 +30,7 @@
 			<h1>Mon Gist</h1>
 			<p><script src="https://gist.github.com/valsauv2/d61387c3c24b9fe879f91d5cdcac9af5.js"></script></p>
 		</div>
+		<!-- Commandes Git -->
 		
 		
 	
