Ajout de git ini

--- a/hello.html
+++ b/hello.html
@@ -37,12 +37,16 @@
 		<div>
 			<h1>Mes Commandes Git</h1>
 			<p>git pull</p>
+
 			<p>git push</p>
 			<p>git log</p>
+
+			<p>git init</p>
+
 		</div>
 
 
->>>>>>> BRANCH_A_MERGE
+
 		
 	
 </body>
